Keep action buttons visible, fix #6

--- a/docs/css/billing.css
+++ b/docs/css/billing.css
@@ -98,17 +98,6 @@ td:last-child {
     border-width: 0;
 }
 
-/* BUTTONS */
-
-.button {
-
-}
-
-.button--unactive {
-    color: #555555;
-}
-
-
 /* UTILS */
 .u-bold {
     font-weight: bold;
